--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,18 @@
 layout: default
 ---
 
-<small>{{ page.date | date: "%-d %B %Y" }}</small>
 <h1>{{ page.title }}</h1>
 
-<p class="view">by {{ page.author | default: site.author }}</p>
+<p class="view">
+  <small>
+    {{ page.date | date: "%b %e, %Y" }}
+    -
+    {{ page.author | default: site.author }}
+  </small>
+</p>
 
 {{content}}
 
 {% if page.tags %}
-  <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
+  <small>TAGS: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
