--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,14 @@ layout: default
 
     {% if page.author %}
       &nbsp;/&nbsp;
-      <span>{{ page.author }}</span>
+      <span>By {{ page.author }}</span>
+    {% endif %}
+
+    {% if page.tags %}
+      &nbsp;/&nbsp;
+      {% for tag in page.tags %}
+        <a href="{{ site.baseurl }}/posts/#{{ tag | downcase }}">{{ tag | downcase }}</a> &nbsp;&nbsp;
+      {% endfor %}
     {% endif %}
   </p>
 
